--- a/simvis/templates/pages/draw.html
+++ b/simvis/templates/pages/draw.html
@@ -19,9 +19,10 @@
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" class="draw-svg" height="100%" width="100%">
-            <rect class="svg-background" width="100%" height="100%" fill="none"></rect>
-        </svg>
+        <div class="diagram-container">
+            <div class="diagram-background"></div>
+            <svg class="diagram"></svg>
+        </div>
     </div>
 {% endblock %}
 
