--- a/simvis/static/sass/project.scss
+++ b/simvis/static/sass/project.scss
@@ -207,6 +207,16 @@ body {
   top: 2px;
 }
 
+.shape-svg-container {
+  visibility: visible;
+}
+
+.shape-svg {
+  fill: #ffffff;
+  pointer-events: all;
+  stroke: #000000;
+}
+
 .diagram-container {
   position: absolute;
   right: 0px;
