--- a/simvis/static/sass/project.scss
+++ b/simvis/static/sass/project.scss
@@ -74,6 +74,7 @@ $red: #b94a48;
 ////////////////////////////////
 		//Main//
 ////////////////////////////////
+
 .d3-context-menu {
 	position: absolute;
 	display: none;
@@ -167,13 +168,40 @@ body {
   width: 100%;
 }
 
+.top-sidebar-container {
+  position: absolute;
+  top: 0;
+  height: 100px;
+  left: 0;
+  right: 0;
+  background: #EEEEEE;
+}
+
 .left-sidebar-container {
   position: absolute;
   left: 0;
-  top: 0;
+  top: 100px;
   bottom: 0;
   width: 200px;
   background: #EEEEEE;
+}
+
+.right-sidebar-container {
+  position: absolute;
+  right: 0;
+  top: 100px;
+  bottom: 0;
+  width: 200px;
+  background: #EEEEEE;
+}
+
+.diagram-container {
+  position: absolute;
+  left: 200px;
+  top: 100px;
+  bottom: 0px;
+  right: 200px;
+  overflow: auto;
 }
 
 .shape-select-container {
@@ -217,23 +245,14 @@ body {
   stroke: #000000;
 }
 
-.diagram-container {
-  position: absolute;
-  right: 0px;
-  left: 200px;
-  top: 0px;
-  bottom: 0px;
-  overflow: auto;
-}
-
 .diagram-background {
-  position: absolute;
+  position: relative;
   border-width: 1px;
   overflow: hidden;
   left: 0px;
   top: 0px;
   right: 0px;
-  bottom: 0px;
+  height: 100%;
   border-color: rgb(202, 202, 202);
   border-style: solid;
   background-color: rgb(255, 255, 255);
@@ -245,4 +264,7 @@ body {
 .diagram {
   width: 100%;
   height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
