--- a/simvis/templates/pages/draw.html
+++ b/simvis/templates/pages/draw.html
@@ -6,6 +6,9 @@
 
 {% block container %}
     <div class="draw-container">
+        <div class="top-sidebar-container">
+            <button type="button" class="btn btn-primary" id="data-upload-btn">Upload Data</button>
+        </div>
         <div class="left-sidebar-container">
             <div class="shape-select-container">
                 <div class="shape-select">
@@ -27,7 +30,37 @@
                 </rect>
             </svg>
         </div>
+        <div class="right-sidebar-container">
+
+        </div>
     </div>
+    <div class="modal fade" id="data-upload-modal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="pre-upload">
+                        <input id="fileupload" type="file" name="file" data-url="data-upload" multiple>
+                        <div id="progress">
+                            <div class="bar" style="width: 0%;height: 18px; background: green;"></div>
+                        </div>
+                    </div>
+                    <div class="post-upload" style="visibility:hidden">
+                        <div id="data-table"></div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 {% endblock %}
 
 
