--- a/simvis/templates/base.html
+++ b/simvis/templates/base.html
@@ -109,6 +109,7 @@
 
       <!-- place project specific Javascript in this file -->
       <script src="{% static 'js/project.js' %}"></script>
+      <script src="{% static 'js/ssv.min.js' %}"></script>
 
 
     {% endblock javascript %}
