--- a/simvis/templates/pages/draw.html
+++ b/simvis/templates/pages/draw.html
@@ -9,28 +9,17 @@
         <div class="top-sidebar-container">
             <button type="button" class="btn btn-primary" id="data-upload-btn">Upload Data</button>
         </div>
-        <div class="left-sidebar-container">
-            <div class="shape-select-container">
-                <div class="shape-select">
-                    {% for k,v in shape_icons.items %}
-                    <a class="shape-item" id={{ k }}>
-                        <svg class="shape-icon">
-                            {{ v|escape|safe }}
-                        </svg>
-                    </a>
-                    {% endfor %}
-                </div>
-            </div>
+        <div id="left-sidebar-container">
         </div>
         <div class="diagram-container">
             <div class="diagram-background"></div>
-            <svg class="diagram">
+            <svg class="diagram" id="draw-svg">
                 <rect class="diagram-space" style="width:100%;height:100%;fill: #ffffff;fill-opacity:0;pointer-events:all;">
 
                 </rect>
             </svg>
         </div>
-        <div class="right-sidebar-container">
+        <div id="right-sidebar-container">
 
         </div>
     </div>
@@ -41,7 +30,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title">Modal title</h4>
+                    <h4 class="modal-title">Data Upload</h4>
                 </div>
                 <div class="modal-body">
                     <div class="pre-upload">
@@ -55,8 +44,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="submit-data-btn">Submit Data</button>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
