--- a/simvis/static/css/project.css
+++ b/simvis/static/css/project.css
@@ -135,6 +135,14 @@ body {
   width: 200px;
   background: #EEEEEE; }
 
+#element-context-menu {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  background: #EEEEEE; }
+
 .diagram-container {
   position: absolute;
   left: 200px;
