--- a/simvis/static/sass/project.scss
+++ b/simvis/static/sass/project.scss
@@ -204,6 +204,15 @@ body {
   background: #EEEEEE;
 }
 
+#element-context-menu {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  background: #EEEEEE;
+}
+
 .diagram-container {
   position: absolute;
   left: 200px;
