--- a/simvis/templates/base2.html
+++ b/simvis/templates/base2.html
@@ -17,6 +17,7 @@
     {% block css %}
     <!-- Latest compiled and minified Bootstrap 4 Alpha 3 CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/semantic.min.css' %}">
 
     <!-- Your stuff: Third-party CSS libraries go here -->
     <link rel="stylesheet" href="{% static 'css/handsontable.min.css' %}">
@@ -108,7 +109,7 @@
       <script src="{% static 'js/handsontable.full.min.js' %}"></script>
 
       <!-- place project specific Javascript in this file -->
-      <script src="{% static 'js/project.js' %}"></script>
+      <script src="{% static 'js/project2.min.js' %}"></script>
       <script src="{% static 'js/ssv.min.js' %}"></script>
 
 
