--- a/simvis/templates/pages/draw2.html
+++ b/simvis/templates/pages/draw2.html
@@ -5,8 +5,11 @@
 {% endblock %}
 
 {% block container %}
+    <div id="navbar-container">
+    </div>
     <div id="draw-container">
     </div>
+
     <div class="modal fade" id="data-upload-modal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
