--- a/simvis/static/css/project.css
+++ b/simvis/static/css/project.css
@@ -119,6 +119,13 @@ body {
   width: 200px;
   background: #EEEEEE; }
 
+#left-sidebar, #right-sidebar {
+  background: #EEEEEE;
+  top: auto; }
+
+#top-sidebar {
+  margin: 0; }
+
 #left-sidebar-menu {
   position: absolute;
   left: 0;
@@ -145,10 +152,10 @@ body {
 
 .diagram-container {
   position: absolute;
-  left: 200px;
-  top: 100px;
-  bottom: 0px;
-  right: 200px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
   overflow: auto; }
 
 .shape-select-container {
@@ -237,3 +244,23 @@ body {
 
 .display-none {
   display: none; }
+
+.diagram-space {
+  width: 100%;
+  height: 100%;
+  fill: #ffffff;
+  fill-opacity: 0;
+  pointer-events: all; }
+
+.draw-sidebar {
+  top: auto; }
+
+.element-outline {
+  fill: none;
+  stroke: black;
+  stroke-width: 1px;
+  stroke-dasharray: 5,5; }
+
+.resizer-circle {
+  fill: red;
+  cursor: se-resize; }
