--- a/simvis/templates/base2.html
+++ b/simvis/templates/base2.html
@@ -109,7 +109,7 @@
       <script src="{% static 'js/handsontable.full.min.js' %}"></script>
 
       <!-- place project specific Javascript in this file -->
-      <script src="{% static 'js/project2.min.js' %}"></script>
+      <script src="{% static 'js/simvis.min.js' %}"></script>
       <script src="{% static 'js/ssv.min.js' %}"></script>
 
 
