--- a/simvis/templates/pages/draw.html
+++ b/simvis/templates/pages/draw.html
@@ -14,7 +14,7 @@
         <div class="diagram-container">
             <div class="diagram-background"></div>
             <svg class="diagram" id="draw-svg">
-                <rect class="diagram-space" style="width:100%;height:100%;fill: #ffffff;fill-opacity:0;pointer-events:all;">
+                <rect class="diagram-space">
 
                 </rect>
             </svg>
