--- a/simvis/static/css/project.css
+++ b/simvis/static/css/project.css
@@ -215,7 +215,8 @@ body {
 .shape-svg {
   fill: #ffffff;
   pointer-events: all;
-  stroke: #000000; }
+  stroke: #000000;
+  stroke-width: 2; }
 
 .diagram-background {
   position: relative;
@@ -255,7 +256,7 @@ body {
 .draw-sidebar {
   top: auto; }
 
-.element-outline {
+.shape-outline {
   fill: none;
   stroke: black;
   stroke-width: 1px;
@@ -264,3 +265,6 @@ body {
 .resizer-circle {
   fill: red;
   cursor: se-resize; }
+
+rect {
+  vector-effect: non-scaling-stroke; }
