--- a/simvis/static/sass/project.scss
+++ b/simvis/static/sass/project.scss
@@ -359,3 +359,24 @@ body {
 rect {
   vector-effect:non-scaling-stroke
 }
+
+#draw-container {
+  height: 100%;
+  width: 100%;
+}
+
+.draw-menu {
+  height: 100%;
+  width: 100%;
+}
+
+.draw-menu-bottom {
+  height: 100%;
+  width: 100%;
+}
+
+.diagram-wrapper {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
