--- a/simvis/static/sass/project.scss
+++ b/simvis/static/sass/project.scss
@@ -380,3 +380,25 @@ rect {
   height: 100%;
   width: 100%;
 }
+
+.dropzone {
+  width: 100%;
+  height: 200px;
+  border-width: 2px;
+  border-color: rgb(102, 102, 102);
+  border-style: dashed;
+  border-radius: 5px;
+  display: table;
+}
+
+.dropzone-area {
+  display:table-cell;
+  vertical-align:middle;
+  text-align:center;
+}
+
+#hot-container {
+  width:100%;
+  height:350px;
+  overflow:hidden;
+}
