--- a/simvis/templates/base2.html
+++ b/simvis/templates/base2.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{% static 'css/semantic.min.css' %}">
 
     <!-- Your stuff: Third-party CSS libraries go here -->
+    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/handsontable.min.css' %}">
 
     <!-- This file stores project-specific CSS -->
