--- a/simvis/static/css/project.css
+++ b/simvis/static/css/project.css
@@ -304,3 +304,10 @@ rect {
   width: 100%;
   height: 350px;
   overflow: hidden; }
+
+.select-outline {
+  pointer-events: none;
+  stroke: #666666;
+  stroke-width: 2px;
+  stroke-dasharray: 10 5;
+  fill: none; }
