--- a/simvis/static/css/project.css
+++ b/simvis/static/css/project.css
@@ -238,7 +238,8 @@ body {
   height: 100%;
   position: absolute;
   top: 0;
-  left: 0; }
+  left: 0;
+  fill: none; }
 
 .display-block {
   display: block; }
@@ -269,17 +270,23 @@ body {
 rect {
   vector-effect: non-scaling-stroke; }
 
-#draw-container {
+#simvis-container {
+  position: absolute;
+  top: 40px;
+  bottom: 0;
+  left: 0;
+  right: 0; }
+
+.draw-container {
   height: 100%;
   width: 100%; }
 
-.draw-menu {
-  height: 100%;
-  width: 100%; }
-
-.draw-menu-bottom {
-  height: 100%;
-  width: 100%; }
+.draw-container-bottom {
+  position: absolute;
+  top: 34px;
+  bottom: 0;
+  left: 0;
+  right: 0; }
 
 .diagram-wrapper {
   position: relative;
@@ -306,8 +313,25 @@ rect {
   overflow: hidden; }
 
 .select-outline {
-  pointer-events: none;
+  pointer-events: all;
   stroke: #666666;
   stroke-width: 2px;
   stroke-dasharray: 10 5;
   fill: none; }
+
+.select-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  fill: none;
+  border: none;
+  pointer-events: visible; }
+
+.diagram-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0; }
