--- a/simvis/templates/pages/draw2.html
+++ b/simvis/templates/pages/draw2.html
@@ -7,7 +7,7 @@
 {% block container %}
     <div id="navbar-container">
     </div>
-    <div id="draw-container">
+    <div id="simvis-container">
     </div>
 {% endblock %}
 
