--- a/simvis/templates/pages/draw2.html
+++ b/simvis/templates/pages/draw2.html
@@ -9,6 +9,7 @@
     </div>
     <div id="simvis-container">
     </div>
+    <form action="ssv" method="post" id="ssv-submit" style="display: none;">{% csrf_token %}
 {% endblock %}
 
 
