--- a/simvis/static/css/project.css
+++ b/simvis/static/css/project.css
@@ -193,7 +193,8 @@ body {
   display: inline-block;
   border-radius: 2px;
   background-repeat: no-repeat;
-  background-position: 50% 50%; }
+  background-position: 50% 50%;
+  color: black; }
 
 .menu-item:hover {
   border: 1px solid #BDBDBD; }
@@ -374,6 +375,22 @@ rect {
   background-color:$colorF
 }
 */
+.text-container {
+  display: inline-block;
+  line-height: 1.2;
+  vertical-align: top;
+  width: 100%;
+  height: 100%;
+  white-space: normal;
+  word-wrap: normal;
+  text-align: center; }
+
+.text {
+  text-align: inherit;
+  text-decoration: inherit;
+  vertical-align: text-top;
+  outline: 0px solid transparent; }
+
 .ui.styled.accordion {
   border-radius: 0;
   background: #F4F4F4; }
