--- a/simvis/templates/base2.html
+++ b/simvis/templates/base2.html
@@ -100,8 +100,7 @@
     {% block javascript %}
       <script src="{% static 'js/jquery.min.js' %}"></script>
 
-      <!-- HOT requirement -->
-      <script src="{% static 'js/numbro.min.js' %}"></script>
+      <!-- HOT requirement <script src="{% static 'js/numbro.min.js' %}"></script>-->
 
       <!-- Your stuff: Third-party javascript libraries go here -->
       <script src="{% static 'js/d3.min.js' %}"></script>
