--- a/simvis/static/css/project.css
+++ b/simvis/static/css/project.css
@@ -318,10 +318,11 @@ rect {
   vertical-align: middle;
   text-align: center; }
 
-#hot-container {
+#data-table {
   width: 100%;
-  height: 350px;
-  overflow: hidden; }
+  height: 100%;
+  overflow-x: scroll;
+  border-right: 3px solid #BDBDBD; }
 
 .select-outline {
   pointer-events: all;
@@ -435,3 +436,6 @@ rect {
 
 #right-sidebar .shapes-selected-menu button:hover {
   background: #373737; }
+
+.xaxis-btn {
+  width: 110px; }
