--- a/simvis/static/css/project.css
+++ b/simvis/static/css/project.css
@@ -225,7 +225,7 @@ body {
   fill: #ffffff;
   pointer-events: all;
   stroke: #000000;
-  stroke-width: 2; }
+  stroke-width: 1; }
 
 .diagram-mat {
   background-color: #EFEBE9;
@@ -452,3 +452,6 @@ rect {
 .minor-text {
   font-size: 12px;
   color: #BDBDBD; }
+
+.color-set-btn {
+  margin: 5px !important; }
