--- a/simvis/static/css/project.css
+++ b/simvis/static/css/project.css
@@ -115,7 +115,8 @@ body {
   background: #373737;
   top: auto;
   position: absolute;
-  height: 100%; }
+  height: 100%;
+  overflow-y: scroll; }
 
 #right-sidebar {
   border-left: 2px solid #BDBDBD;
@@ -226,6 +227,9 @@ body {
   pointer-events: all;
   stroke: #000000;
   stroke-width: 1; }
+
+.shape-container {
+  cursor: move; }
 
 .diagram-mat {
   background-color: #EFEBE9;
