--- a/simvis/static/sass/project.scss
+++ b/simvis/static/sass/project.scss
@@ -191,6 +191,7 @@ body {
   top: auto;
   position:absolute;
   height:100%;
+  overflow-y:scroll;
 }
 
 #right-sidebar {
@@ -318,6 +319,10 @@ body {
   pointer-events: all;
   stroke: #000000;
   stroke-width: 1;
+}
+
+.shape-container {
+  cursor: move;
 }
 
 .diagram-mat {
