--- a/simvis/templates/base2.html
+++ b/simvis/templates/base2.html
@@ -107,7 +107,7 @@
       <script src="{% static 'js/d3-selection-multi.v1.min.js' %}"></script>
 
       <!-- place project specific Javascript in this file -->
-      <script src="{% static 'js/simvis.min.js' %}"></script>
+      <script src="{% static 'js/dist/main.bundle.js' %}"></script>
       <script src="{% static 'js/ssv.min.js' %}"></script>
 
 
