--- a/simvis/static/sass/project.scss
+++ b/simvis/static/sass/project.scss
@@ -530,6 +530,7 @@ rect {
 
 #header-container {
   margin-bottom:0;
+  margin-top:0;
   border-bottom:none;
   background:$colorB;
 }
@@ -612,3 +613,13 @@ rect {
 .color-set-btn {
   margin: 5px !important;
 }
+
+#submit-error-message {
+  position: fixed;
+  top: 20px;
+  right: 10px;
+  width: 50%;
+  z-index: 1000;
+}
+
+
