--- a/simvis/templates/base2.html
+++ b/simvis/templates/base2.html
@@ -108,7 +108,7 @@
 
       <!-- place project specific Javascript in this file -->
       <script src="{% static 'js/dist/main.bundle.js' %}"></script>
-      <script src="{% static 'js/ssv.min.js' %}"></script>
+      <script src="{% static 'js/ssv/ssv.bundle.js' %}"></script>
 
 
     {% endblock javascript %}
