Further appsepc config

--- a/simvis/templates/pages/draw2.html
+++ b/simvis/templates/pages/draw2.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block container %}
+    <div>XXX</div>
     <div id="navbar-container">
     </div>
     <div id="simvis-container">
